--- a/views/show.ejs
+++ b/views/show.ejs
@@ -28,7 +28,7 @@
             <div class="ui two bottom attached buttons">
                 <a href="/blogs/<%= blog.id %>/edit" class="ui basic button">
                     <i class="icon edit"></i>
-                    Edit
+                    Edit!
                 </a>
                 <form method="POST" action="/blogs/<%=blog.id%>?_method=DELETE">
                     <button class="ui basic button" id="tras">
